Separated msg generator from ProduserRunner, added new test for generation, created new package for classes related to messages